test/e2e/chainsaw/hybridgateway/gateway-tls-secret-cross-namespace/01-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ($gateway_name)
  namespace: ($gateway_namespace)
spec:
  gatewayClassName: (join('-', [($test_name), 'gateway-class']))
  listeners:
  - name: http
    protocol: HTTP
    port: ($listener_http_port)
  - name: https
    protocol: HTTPS
    port: ($listener_https_port)
    hostname: ($sni_hostname)
    tls:
      mode: Terminate
      certificateRefs:
      - name: ($cert_secret_name)
        namespace: ($cert_secret_namespace)
