test/e2e/chainsaw/hybridgateway/gateway-tls-secret-cross-namespace/07-kongreferencegrant.yaml
apiVersion: configuration.konghq.com/v1alpha1
kind: KongReferenceGrant
metadata:
  name: ($kong_reference_grant_name)
  namespace: ($cert_secret_namespace)
spec:
  from:
    - group: configuration.konghq.com
      kind: KongCertificate
      namespace: ($gateway_namespace)
  to:
    - group: core
      kind: Secret
      name: ($cert_secret_name)
