test/e2e/chainsaw/common/_step_templates/assert-kongSNI.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: assert-kong-sni
spec:
  try:
    - script:
        env:
          - name: RESOURCE_TYPE
            value: ($resource_type)
          - name: GATEWAY_NAME
            value: ($gateway_name)
          - name: GATEWAY_NAMESPACE
            value: ($gateway_namespace)
        # Reusing your script to get the dynamic ControlPlane name
        content: |
          bash ../../common/scripts/kongResource_name.sh
        outputs:
          - name: certificate_name
            value: (json_parse($stdout).name)
    - assert:
        resource:
          apiVersion: configuration.konghq.com/v1alpha1
          kind: KongSNI
          metadata:
            namespace: ($namespace)
            # Dynamic Label and Annotation Assertions
            (labels."gateway-operator.konghq.com/managed-by"): 'Gateway'
            (labels."gateway-operator.konghq.com/listener-port"): (to_string($listener_https_port))
            (annotations."gateway-operator.konghq.com/hybrid-gateways"): (join('/', [($gateway_namespace), ($gateway_name)]))
            ownerReferences:
              - apiVersion: gateway.networking.k8s.io/v1
                kind: Gateway
                name: ($gateway_name)
                controller: true
          spec:
            name: ($sni_hostname)
            certificateRef:
              # This matches the certificate name generated by the gateway operator
              name: ($certificate_name)
          status:
            (conditions[?type == 'Programmed']):
              - status: 'True'
                reason: Programmed
            (conditions[?type == 'KongCertificateRefValid']):
              - status: 'True'
                reason: Valid
            (conditions[?type == 'ControlPlaneRefValid']):
              - status: 'True'
                reason: Valid
            (conditions[?type == 'APIAuthResolvedRef']):
              - status: 'True'
                reason: ResolvedRef
            (conditions[?type == 'APIAuthValid']):
              - status: 'True'
                reason: Valid
